# stockapi

./: .gitignore  README.md  config.py  pyproject.toml  run.py  tasks.py  worker.py
stockapi/: models.py  run.py  setting.py  stockinfo.py
stockapi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_stockapi.py
