[tool.poetry]
name = "stockapi"
version = "0.1.0"
description = ""
authors = ["flack.chen <flack.chen@infinigo.cn>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.52.0"
aiohttp = "^3.6.2"
cchardet = "^2.1.5"
aiodns = "^2.0.0"
daphne = "^2.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
